Add offset of content in composited layer to sticky position offset.

The actual sticky layoutobject may have an offset within its composited layer
which needs to be included in the compositing update of sticky positioning.

BUG=670274
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2636233002
Cr-Commit-Position: refs/heads/master@{#444527}

Former-commit-id: 653e80aeeaac895c6f9bfb6181655f15f29cb0be